[gd_scene load_steps=10 format=3 uid="uid://djm4q1upi2pp"]

[ext_resource type="Theme" uid="uid://c13hhafdvg3yv" path="res://ui/main_theme.tres" id="1_vaq8m"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_xtqha"]
[ext_resource type="Shader" path="res://ui/main_menu/menuback.gdshader" id="2_bxxsx"]
[ext_resource type="Texture2D" uid="uid://ucymomtf4deg" path="res://ui/main_menu/dots.png" id="3_1n42t"]
[ext_resource type="Texture2D" uid="uid://deyw45uyexkq" path="res://ui/main_menu/menu_mask.png" id="4_85hnx"]
[ext_resource type="Texture2D" uid="uid://cj4r255tmier4" path="res://ui/main_menu/menu.png" id="5_7oivv"]
[ext_resource type="Texture2D" uid="uid://b35nnk5fgvc1f" path="res://ui/main_menu/linda_logo.png" id="6_bsimv"]
[ext_resource type="Texture2D" uid="uid://wn3216dem6ed" path="res://ui/main_menu/frame.png" id="7_7c8xy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6b2k1"]
shader = ExtResource("2_bxxsx")
shader_parameter/node_size = Vector2(13, 13)
shader_parameter/color = Color(0.937255, 0.317647, 0.207843, 1)
shader_parameter/color2 = Color(1, 0.835294, 0.196078, 1)
shader_parameter/albedo_texture = ExtResource("3_1n42t")
shader_parameter/mask_texture = ExtResource("4_85hnx")

[node name="MainMenu" type="Control" node_paths=PackedStringArray("main", "options")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vaq8m")
script = ExtResource("1_xtqha")
main = NodePath("Control/Main")
options = NodePath("Control/Options")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_6b2k1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_7oivv")
metadata/_edit_lock_ = true

[node name="LindaLogo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.709
anchor_top = 0.5
anchor_right = 0.709
anchor_bottom = 0.5
offset_left = -27.88
offset_top = -32.0
offset_right = 26.12
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_bsimv")
stretch_mode = 2

[node name="Frame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_7c8xy")
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Play" type="Button" parent="Control/Main"]
layout_mode = 2
size_flags_horizontal = 4
text = "PLAY"

[node name="Options" type="Button" parent="Control/Main"]
layout_mode = 2
size_flags_horizontal = 4
text = "OPTIONS"

[node name="Quit" type="Button" parent="Control/Main"]
layout_mode = 2
size_flags_horizontal = 4
text = "QUIT"

[node name="Options" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Fullscreen" type="CheckButton" parent="Control/Options"]
layout_mode = 2
size_flags_horizontal = 4
button_pressed = true
text = "Fullscreen"

[node name="Back" type="Button" parent="Control/Options"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="pressed" from="Control/Main/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/Main/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/Options/Back" to="." method="_on_options_back_pressed"]
